--- a/busca-heuristica/index.html
+++ b/busca-heuristica/index.html
@@ -8,7 +8,7 @@
     <title>Atividade 1 - Busca Heurística</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="assets/favicon.png">
+    <link rel="shortcut icon" href="assets/favicon.png">
 
     <!-- Fonte -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -54,109 +54,114 @@
                 <div class="route-controls">
                     <sl-select class="station-selection-dropdown" id="departure-station-selection-dropdown" placeholder="Selecione uma estação..." size="large">
                         <p class="station-selection-label font-bold" slot="label">Saída</p>
-                        <sl-menu-item value="E1">E1
+                        <sl-menu-item value="e1">E1
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E2">E2
+                        <sl-menu-item value="e2">E2
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E3">E3
+                        <sl-menu-item value="e3">E3
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha vermelha" class="icon-indicator-red-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E4">E4
+                        <sl-menu-item value="e4">E4
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E5">E5
+                        <sl-menu-item value="e5">E5
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E6">E6
+                        <sl-menu-item value="e6">E6
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E7">E7
+                        <sl-menu-item value="e7">E7
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E8">E8
+                        <sl-menu-item value="e8">E8
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E9">E9
+                        <sl-menu-item value="e9">E9
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha vermelha" class="icon-indicator-red-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E10">E10
+                        <sl-menu-item value="e10">E10
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E11">E11
+                        <sl-menu-item value="e11">E11
                             <sl-icon slot="suffix" name="circle-fill" label="Linha vermelha" class="icon-indicator-red-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E12">E12
+                        <sl-menu-item value="e12">E12
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E13">E13
+                        <sl-menu-item value="e13">E13
                             <sl-icon slot="suffix" name="circle-fill" label="Linha vermelha" class="icon-indicator-red-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E14">E14
+                        <sl-menu-item value="e14">E14
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
                     </sl-select>
 
                     <sl-select class="station-selection-dropdown" id="destination-station-selection-dropdown" placeholder="Selecione uma estação..." size="large">
                         <p class="station-selection-label font-bold" slot="label">Destino</p>
-                        <sl-menu-item value="E1">E1
+                        <sl-menu-item value="e1">E1
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E2">E2
+                        <sl-menu-item value="e2">E2
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E3">E3
+                        <sl-menu-item value="e3">E3
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha vermelha" class="icon-indicator-red-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E4">E4
+                        <sl-menu-item value="e4">E4
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E5">E5
+                        <sl-menu-item value="e5">E5
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E6">E6
+                        <sl-menu-item value="e6">E6
                             <sl-icon slot="suffix" name="circle-fill" label="Linha azul" class="icon-indicator-blue-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E7">E7
+                        <sl-menu-item value="e7">E7
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E8">E8
+                        <sl-menu-item value="e8">E8
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E9">E9
+                        <sl-menu-item value="e9">E9
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha vermelha" class="icon-indicator-red-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E10">E10
+                        <sl-menu-item value="e10">E10
                             <sl-icon slot="suffix" name="circle-fill" label="Linha amarela" class="icon-indicator-yellow-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E11">E11
+                        <sl-menu-item value="e11">E11
                             <sl-icon slot="suffix" name="circle-fill" label="Linha vermelha" class="icon-indicator-red-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E12">E12
+                        <sl-menu-item value="e12">E12
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E13">E13
+                        <sl-menu-item value="e13">E13
                             <sl-icon slot="suffix" name="circle-fill" label="Linha vermelha" class="icon-indicator-red-line"></sl-icon>
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
-                        <sl-menu-item value="E14">E14
+                        <sl-menu-item value="e14">E14
                             <sl-icon slot="suffix" name="circle-fill" label="Linha verde" class="icon-indicator-green-line"></sl-icon>
                         </sl-menu-item>
                     </sl-select>
+
+                    <sl-button class="block-button" id="calculate-route-button" variant="primary" size="large" disabled>
+                        Calcular rota
+                        <sl-icon slot="suffix" name="chevron-right"></sl-icon>
+                    </sl-button>
                 </div>
 
             </div>
@@ -218,7 +223,7 @@
         </div>
     </div>
 
-    <script src="js/controller.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
