Implementa o algoritmo por completo

--- a/busca-heuristica/index.html
+++ b/busca-heuristica/index.html
@@ -162,10 +162,12 @@
                         Calcular rota
                         <sl-icon slot="suffix" name="chevron-right"></sl-icon>
                     </sl-button>
-                </div>
 
+                </div>
             </div>
             
+            <sl-tag class="hidden-element" id="route-time-indicator" variant="primary"></sl-tag>
+                        
             <footer>
                 <sl-divider></sl-divider>
                 <p class="footer-course">Sistemas Inteligentes • 2021.2</p>
